# Easter-Hunt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Background.hpp  ColorList.hpp  Display.hpp  Egg.hpp  EggController.hpp  Player.hpp  Resources.hpp  Scene.hpp  SceneGameplay.hpp  SceneMenager.hpp  SceneSplashScreen.hpp  Timer.hpp
res/sfx/: EasterHunt_SoundBounce.rfx  EasterHunt_SoundPickup.rfx
src/: Background.cpp  ColorList.cpp  Display.cpp  Egg.cpp  EggController.cpp  Player.cpp  Resources.cpp  SceneGameplay.cpp  SceneMenager.cpp  SceneSplashScreen.cpp  Timer.cpp  main.cpp
